# itsm-knowledge-rag

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Dockerfile.wiki  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: dataset.md  (+10 more)
mkdocs/: mkdocs.yml  pyproject.toml
mkdocs/docs/: index.md
mkdocs/docs/stylesheets/: extra.css
mkdocs/docs/wiki/AIT/: downstream-api-latency-exceeds-timeout.md  downstream-rate-limiting-throttling.md  expired-api-token-auth-failures.md  stale-retry-backoff-amplifies-latency.md  unconfirmed-mixed-credential-latency-throttling.md
mkdocs/docs/wiki/ALP/: expired-reset-token-primary.md  stale-credentials-unidentified-source.md  stale-mobile-cached-credentials.md  stale-mobile-credentials-plus-expired-reset-token.md
mkdocs/docs/wiki/CES/: automated-renewal-process-failed-to-complete.md  renewed-chain-not-deployed-to-lb-with-monitoring-gap.md  unconfirmed-tls-presentation-issue-evidence-gap.md  valid-leaf-but-stale-or-missing-intermediate-served.md  wrong-certificate-bound-to-endpoint.md
mkdocs/docs/wiki/DCP/: encryption-actually-disabled-or-attestation-failed.md  encryption-telemetry-broken-after-os-or-hardware-change.md  indeterminate-compliance-refresh-failure.md  stale-checkin-missing-encryption-signal.md  stale-compliance-state-mismatch-ca-cache.md  stale-deprecated-compliance-policy-reference.md
mkdocs/docs/wiki/DRF/: missing-or-incorrect-conditional-forwarder.md  no-server-side-fault-client-side-or-transient.md  resolver-path-inconsistency-mixed-cause.md  stale-authoritative-zone-record.md  stale-resolver-cache-after-record-change.md
mkdocs/docs/wiki/EDE/: inconclusive-evidence-bitlocker-not-fully-enabled.md  intune-policy-not-assigned-or-stale-deprecated-policy.md  mdm-sync-failure-causing-state-desync.md  recovery-key-escrow-failure-despite-healthy-tpm-and-policy.md  tpm-protector-not-initialized.md
mkdocs/docs/wiki/LPD/: endpoint-scan-backlog-startup-disk-contention.md  low-disk-temp-file-accumulation.md  resource-heavy-startup-policy.md  unconfirmed-transient-post-login-slowdown.md
mkdocs/docs/wiki/OES/: exchange-online-mailbox-throttling.md  expired-m365-auth-tokens.md  intune-mdm-device-compliance-block.md  stale-corrupted-outlook-desktop-profile-cache.md  stale-mobile-sync-partnership.md  suspected-server-side-mailbox-fault.md  unresolved-endpoint-client-sync-state.md
mkdocs/docs/wiki/PDQ/: corrupt-driver-package-spooler-load-failure.md  queue-left-paused.md  spool-directory-permissions.md  stale-queue-driver-mapping.md  unresolved-rendering-escalation-holding.md
mkdocs/docs/wiki/SDA/: broken-ntfs-acl-inheritance-or-deny-ace.md  missing-ad-security-group-membership.md  missing-group-plus-stale-credential-or-acl-compound.md  stale-cached-smb-credentials.md  stale-or-wrong-mapped-share-path.md  (+1 more)
(+191 files in other folders)
