[project]
name = "itsm-knowledge-rag"
version = "0.0.2"
description = "Turns closed IT tickets into searchable, verifiable answers. RAG pipeline with PII redaction at ingest (Presidio + custom recognizers), hybrid retrieval (pgvector + BM25), and LLM curation — with a deterministic PII-leakage benchmark separate from judge-based curation quality."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Alexander Meau" }]
requires-python = ">=3.11"

dependencies = [
    "python-dotenv>=1.0",
    "huggingface-hub>=0.30",
    "pandas>=2.2",
    "pyarrow>=16",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/itsm_rag"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
