[project]
name = "itsm-knowledge-rag"
version = "0.0.2"
description = "Turns closed IT tickets into searchable, verifiable answers. RAG pipeline with PII redaction at ingest (Presidio + custom recognizers), hybrid retrieval (Qdrant, dense + sparse vectors), and LLM curation — with a deterministic PII-leakage benchmark separate from judge-based curation quality."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Alexander Meau" }]
requires-python = ">=3.11"

dependencies = [
    "python-dotenv>=1.0",
    "huggingface-hub>=0.30",
    "pandas>=2.2",
    "pyarrow>=16",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.10",
    # spacy intentionally omitted: the redactor uses PatternRecognizer directly
    # with empty NlpArtifacts, bypassing AnalyzerEngine and its NLP model download.
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # presidio, pandas, pyarrow, huggingface-hub lack stubs

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat src layout — modules live directly under src/
packages = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/test"]
